# NerdX

./: .dockerignore  .env.example  .gitignore  .replit  ADD_SUPER_ADMIN_INSTRUCTIONS.md  ADVANCED_CREDIT_SYSTEM_IMPLEMENTATION.md  AI_FEATURES_TEST_RESULTS.md  AI_QUESTION_REPETITION_FIXES.md  ANDROID_SETUP_GUIDE.md  ANDROID_STUDIO_QUICK_GUIDE.md  ANDROID_STUDIO_SETUP.md  AZURE_MIGRATION_CHECKLIST.md  AZURE_QUICK_START.md  A_LEVEL_CHEMISTRY_CREDITS_VERIFICATION.md  App.js  BACKEND_CREDIT_COSTS_UPDATE_SUMMARY.md  BIOLOGY_QUESTION_GENERATION_IMPLEMENTATION.md  CHEMISTRY_IMPLEMENTATION_STATUS.md  COMBINED_SCIENCE_QUESTION_GENERATION_FIX.md  COMPLETE_AI_FEATURES_TEST_RESULTS.md  COMPLETE_ZIMSEC_IMPLEMENTATION.md  COST_REVENUE_PROFIT_100_STUDENTS.md  CREDITS_AND_AI_FEATURES_ANALYSIS.md  CREDIT_DEDUCTION_BACKBONE.md  CREDIT_SYSTEM_DEEP_AUDIT.md  DEEPSEEK_TEST_RESULTS.md  DEPLOYMENT.md  DEPLOYMENT_FIXES_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOY_IMMEDIATELY_SUCCESS.md  DKT_IMPLEMENTATION_GUIDE.md  Dockerfile  Dockerfile.voice  ENGLISH_COMPREHENSION_DEEPSEEK_DEPLOYMENT.md  ENTERPRISE_SCALE_WHATSAPP_PROTECTION.md  ENVIRONMENT_SETUP.md  FEATURE_CREDITS_TABLE.md  FINAL_DEPLOYMENT_SUCCESS.md  FINAL_TEST_SUMMARY.md  FIND_NGROK_URL.md  (+308 more)
.azure/: config
.claude/: launch.json
.cursor/: mcp.json
NerdXApp/: .easignore  .gitignore  @nerdx6__nerdxapp.jks  ANDROID_STUDIO_QUICK_START.md  APK_BUILD_SUCCESS.md  App.tsx  BUILD_INSTRUCTIONS.md  BUILD_SUCCESS_SUMMARY.md  CDN_SETUP_GUIDE.md  FIXES_APPLIED.md  FIX_REACT_NATIVE_CLI.md  FIX_REANIMATED_INSTALL.md  FIX_REANIMATED_VERSION.md  README.md  (+33 more)
(+1382 files in other folders)
