[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.31.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "flask-dance>=7.1.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "pypdf2>=3.0.1",
    "speechrecognition>=3.14.3",
    "sympy>=1.14.0",
    "seaborn>=0.13.2",
    "flask-cors>=6.0.1",
]
